--- a/multi-step-form-main/style.css
+++ b/multi-step-form-main/style.css
@@ -449,9 +449,26 @@
   .slider.round:before {
     border-radius: 50%;
   }
-  @media screen and (max-width: 800px) {
+
+  @media (max-width: 768px) { /* Styles for tablets and smaller */ 
+
+    /* Layout adjustments for smaller screens */ 
+
+}
+
+
+
+@media (min-width: 769px) { /* Styles for desktops and larger */ 
+
+    /* Layout adjustments for larger screens */ 
+
+} 
+
+
+  @media screen and (max-width: 768px) {
     body {
       position: relative;
+
     }
     .form-sidebar {
       position: fixed;
@@ -460,7 +477,7 @@
       right: 0;
       background-image: url("./assets/images/bg-sidebar-mobile.svg");
       flex-direction: row;
-      height: 300px;
+      height: 100px;
       background-size: cover;
       width: 100%;
       align-items: flex-start;
@@ -469,15 +486,20 @@
     }
     .step-content {
       display: none;
+    
     }
     .form {
       position: absolute;
-      top: 15%;
+      top: 13%;
+      bottom: 13px;
       max-width: 375px;
       background-color: white;
+
     }
     .form-container {
-      padding: 2rem;
+      padding: 0;
+      border-radius: 10px;
+    
     }
     .btns {
       position: fixed;
@@ -485,11 +507,12 @@
       background-color: white;
       right: 0;
       left: 0;
-      height: 100px;
+      height: 80px;
       padding-inline: 1rem;
     }
     .step-1 .btns button {
       margin: auto 0 auto auto;
+      
     }
     .step-2 form {
       flex-direction: column;
@@ -512,7 +535,7 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      line-height: 1.5rem;
+      line-height: 70rem;
     }
     .switcher {
       margin: 2rem 0;
